<resources>
    <string name="app_name">NMedia</string>
    <string name="str_nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_like">Likes</string>
    <string name="views" translatable="false">5</string>
    <string name="share" translatable="false">5</string>
    <string name="like" translatable="false">999</string>
    <string name="description_share">Share</string>
    <string name="description_view">Views</string>
    <string name="remove">Delete</string>
    <string name="post_text">Enter text</string>
    <string name="description_post_like">Save</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="edit">Edit</string>
    <string name="cancel_edit">Cancel edit</string>
    <string name="edit_image">Edit image</string>
    <string name="edit_text">Edit post</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Save</string>
    <string name="add_post">Add post</string>
    <string name="description_post_video">Post video preview</string>
    <string name="description_post_play">Play video</string>
    <string name="text_present">Input text…</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_new_posted">%1$s posted a new post</string>
    <string name="error_notification_title">You are using an old version of the application</string>
    <string name="error_notification_text">Please update the application for correct operation</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    />
</resources>